--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,4 +8,97 @@ html{
 
 body{
     font-size: 1.6rem;
+    font-family: 'Poppins', sans-serif;
+    height: 10000px;
+}
+/*---------------------- common----------- */
+a{
+    text-decoration: none;
+}
+
+.main-content{
+    width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: calc(100% - 48px);
+}
+
+.btn{
+    display: inline-block;
+    min-width: 118px;
+    padding: 0px 16px;
+    line-height: 50px;
+    color: #FFF;
+    font-size: 1.6rem;
+    font-weight: 600;
+    text-align: center;
+    border-radius: 24.5px;
+    background: #171100;
+  
+}
+
+/* -----------------Header-------------------- */
+
+.header .body{
+    display: flex;
+    align-items: center;
+    padding: 36px 0 8px;
+}
+
+.header.fixed{
+    position: sticky;
+    top: -28px   ;
+}
+
+.header{
+    
+    background: #71b406;
+}
+
+.nav{
+    margin-left: auto;
+}
+
+.nav ul{
+    display: flex;
+}
+
+/* .header .nav{
+    margin-left: auto;
+} */
+
+.nav a{
+    color: #5F5B53;
+    font-size: 1.6rem;
+    padding: 8px 21px;
+    position: relative;
+}
+
+.nav a:hover{
+    color: #171100;
+    /* font-weight: 600; */
+    text-shadow: 1px 0 0 currentColor;
+}
+
+
+.nav li.active a::after{
+    position: absolute;
+    left: 21px;
+    bottom: 6px;
+    content: "";
+    display: block;
+    width: 12px;
+    height: 2px;
+    border-radius: 1px;
+    background: #171100;
+    
+    
+}
+
+.header .btn-sign-up{
+    min-width: 144px;
+}
+
+.header .action{
+    margin-left: 49px;
 }
