--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ a{
 
 .header{
     
-    background: #71b406;
+    background: #FFFCF4;
 }
 
 .nav{
@@ -101,4 +101,86 @@ a{
 
 .header .action{
     margin-left: 49px;
+}
+
+/* --------------Hero------------- */
+
+.hero{
+    padding-top: 56px 0 65px;
+    background-color:  #FFFCF4;;
+}
+
+.hero .body{
+    display: flex;
+}
+
+.hero .media-block{
+    position: relative;
+    width: 48%;
+}
+
+.hero .content-block{
+    width: 52%;
+}
+
+.hero .media-block .img{
+    width: 470px;
+    height: 685px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.hero .media-block .hero-summary{
+    position: absolute;
+    padding: 24px;
+    right: 0;
+    bottom: 48px;
+    width: 270px;
+    border-radius: 12px;
+    background: #FFF;
+    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+
+.hero .item{
+    display: flex;
+    align-items: center;
+}
+
+.hero-summary .item + .item {
+    margin-top: 22px;
+  }
+
+.hero-summary .icon{
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background-color: #FFF9E8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-summary .icon2{
+    background-color:#FCEFFF ;
+}
+
+.hero-summary .icon3{
+    background-color:#EBEAFF ;
+}
+
+.hero-summary .info{
+    margin-left: 16px;
+}
+
+.hero-summary .label{
+    color: #5F5B53;
+    font-size: 1.4rem;
+    line-height: 1.86; /* 185.714% */
+}
+
+.hero-summary .text{
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67rem; /* 166.667% */
 }
