--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@
     box-sizing: border-box;
 }
 
+:root{
+    --font-heading:'Sen', sans-serif;    
+    --color-button:#FFB900;
+}
+
+
 html{
     font-size: 62.5%;
 }
@@ -18,9 +24,10 @@ a{
 
 .main-content{
     width: 1170px;
+    max-width: calc(100% - 48px);
     margin-left: auto;
     margin-right: auto;
-    max-width: calc(100% - 48px);
+    
 }
 
 .btn{
@@ -32,9 +39,13 @@ a{
     font-size: 1.6rem;
     font-weight: 600;
     text-align: center;
-    border-radius: 24.5px;
+    border-radius: 999px;
     background: #171100;
-  
+    
+}
+
+.btn:hover{
+    opacity: 0.9;
 }
 
 /* -----------------Header-------------------- */
@@ -106,21 +117,22 @@ a{
 /* --------------Hero------------- */
 
 .hero{
+    /* width: 1440px;
+    height: 900px;   */
     padding-top: 56px 0 65px;
     background-color:  #FFFCF4;;
 }
 
 .hero .body{
     display: flex;
+    /* width: 1440px; */
 }
 
+
+/* -------------------hero left--------------- */
 .hero .media-block{
     position: relative;
     width: 48%;
-}
-
-.hero .content-block{
-    width: 52%;
 }
 
 .hero .media-block .img{
@@ -183,4 +195,98 @@ a{
     font-size: 1.8rem;
     font-weight: 600;
     line-height: 1.67rem; /* 166.667% */
+}
+
+/* --------------------hero-right------------- */
+
+.hero .content-block{
+    width: 52%;
+    /* width: 470px; */
+    margin-top: 64px;
+    margin-left: 130px;
+    /* margin-right: 135px; */
+}
+
+.hero .heading{
+    width: 470px;
+    color: #171100;
+    font-family: var(--font-heading);
+    font-size: 5.8rem;
+    font-weight: 700;
+    line-height: 1.17; /* 117.241% */
+    letter-spacing: -1.16px;
+}
+
+.hero .desc{
+    margin-top: 22px;
+    color: #5F5B53;
+    font-size: 1.8rem;
+    line-height: 1.67; /* 166.667% */
+}
+
+.hero .cta-group{
+    display: flex;
+    margin-top: 38px;
+}
+
+.hero .hero-see-course{
+    background-color: var(--color-button);
+    min-width: 180px;
+    height: 64px;
+    line-height: 64px;
+    /* line-height: 64px; */
+    /* border-radius: 32px; */
+   
+}
+
+.hero .Watch-Video .icon{
+    /* width: 40px;
+    height: 40px;
+    background: #FFF;
+    border-radius: 50%;
+    padding: 12px; */
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    background: #FFF;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.07);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero .Watch-Video{
+    width: 202px;
+    display: flex;
+    align-items: center;
+    margin: 12px 0 12px 28px;
+    border: none;
+    background-color: transparent;
+}
+
+.hero .cta-group span{
+    width: 148px;
+    color: #171100; 
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67; /* 166.667% */
+}
+
+.hero .desc-recent{
+    margin-top: 48px;
+    margin-bottom: 8px;
+}
+
+.hero .content-block strong{
+    margin-right: 15px;
+    color: #171100;
+font-family: Sen;
+font-size: 44px;
+font-style: normal;
+font-weight: 700;
+line-height: 54px; /* 122.727% */
+}
+
+.hero .content-block strong:last-child{
+    margin-left: 28px;
 }
