--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,15 @@ a{
     
 }
 
+.heading-lv2{
+    color: #171100;
+    font-family: var(--font-heading);
+    font-size: 3.8rem;
+    font-weight: 700;
+    line-height: 1.27; /* 126.316% */
+    letter-spacing: -0.76px;
+}
+
 .btn:hover{
     opacity: 0.9;
 }
@@ -290,3 +299,48 @@ line-height: 54px; /* 122.727% */
 .hero .content-block strong:last-child{
     margin-left: 28px;
 }
+
+/* --------------popular--------------- */
+
+.popular{
+    padding: 65px 0;
+    margin-top: 135px;
+}
+
+.popular .info .desc{
+    width: 458px;
+    margin-top: 16px;
+    color: #5F5B53;
+    font-size: 1.8rem;
+    line-height: 1.67; /* 166.667% */
+}
+
+.popular .popular-top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.popular .control-btn{
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-button);
+    border-radius: 40px;
+    border: 1px solid var(--color-button);
+}
+
+.popular .control-btn:hover{
+    background-color: var(--color-button);
+    color: #FFF;
+    cursor: pointer;
+}
+
+.popular .controls{
+    display: flex;
+    gap: 18px;
+}
+
