--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,3 +344,76 @@ line-height: 54px; /* 122.727% */
     gap: 18px;
 }
 
+
+/* ----------------item------------- */
+.popular .course-list{
+    /* background-color: aqua; */
+    margin-top: 55px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.popular .course-list .foot,.rating,.head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.popular .course-list .item:hover{
+    border-radius: 12px;
+    background: #FFF;
+    box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+    border: 1px solid transparent;
+}
+
+.popular .course-list .item{
+    width: 370px;
+    height: 466px;
+    border-radius: 12px;
+    border: 1px solid #E2DFDA;
+    background: #FFF;
+}
+
+.popular .course-list .info{
+    margin: 16px 22px 22px;
+}
+
+.popular .course-list .info p{
+    width: 326px;
+    color: #5F5B53;
+    font-size: 1.4rem;
+    line-height: 1.86; /* 185.714% */
+    margin: 6px 0 12px 0;
+}
+
+.popular .course-list .info .title,.price{
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67; /* 166.667% */
+}
+
+.popular .course-list .info .btn-buynow{
+    width: 118px;
+    height: 50px;
+}
+
+.popular .course-list .info .btn-buynow:hover{
+    background-color: var(--color-button);
+}
+
+.popular .course-list .info .rating{
+    width: 48px;
+    height: 28px;
+}
+
+.popular .course-list .info .rating img{
+    width: 18px;
+    height: 18px;
+    margin-bottom: 3px;
+}
+
+.popular .course-list .info .rating span{
+    color: #FEA31B;
+    font-size: 1.6rem;
+    line-height: 1.75; /* 175% */
+}
