--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ html{
 body{
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
+    width: 1440px;
+    margin: 0 auto;
     height: 10000px;
 }
 /*---------------------- common----------- */
@@ -350,7 +352,8 @@ line-height: 54px; /* 122.727% */
     /* background-color: aqua; */
     margin-top: 55px;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    gap: 30px;
 }
 
 .popular .course-list .foot,.rating,.head{
@@ -377,14 +380,16 @@ line-height: 54px; /* 122.727% */
     margin: 16px 22px 22px;
     /* max-width: 326px;
     height: 150px; */
+    
 }
 
-.popular .course-list .info p{
-    width: 326px;
+.popular .course-list .info .desc{
+    /* width: 326px; */
     color: #5F5B53;
     font-size: 1.4rem;
     line-height: 1.86; /* 185.714% */
     margin: 6px 0 12px 0;
+    width: auto;
 }
 
 .popular .course-list .info .title,.price{
@@ -418,4 +423,67 @@ line-height: 54px; /* 122.727% */
     color: #FEA31B;
     font-size: 1.6rem;
     line-height: 1.75; /* 175% */
+}
+
+/* -----------feedback-------------- */
+.feedback{
+    background: #2E2100;
+    padding: 96px 0px;
+    margin-top: 135px;
+}
+
+.feedback .main-content{
+    /* margin: 96px 135px; */
+    /* display: flex; */
+}
+
+.feedback .feedback-item{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.feedback .content{
+    width: 770px;
+    height: 188px;
+}
+
+.feedback .info .desc{
+    color: #BFBCB2;
+    font-size: 1.4rem;
+    line-height: 1.86;
+}
+
+.feedback .info .name{
+    color: #F7F7F7;
+    font-family: var(--font-heading);
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 1.42; /* 141.667% */
+    margin: 18px 0 4px;
+}
+
+.feedback .content blockquote{
+    color: #FFF;
+    font-size: 2.6rem;
+    font-style: italic;
+    line-height: 1.54; /* 153.846% */
+}
+
+.feedback .dots{
+    margin-top: 28px;
+    display: flex;
+    gap: 6px;
+}
+
+.feedback .dots .dot{
+    width: 6px;
+    height: 6px;
+    border-radius: 6px;
+    background: #634700;
+    cursor: pointer;
+}
+
+.feedback .dots .dot:hover{
+    background-color: var(--color-button);
 }
