--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,14 +432,17 @@ line-height: 54px; /* 122.727% */
     margin-top: 135px;
 }
 
-.feedback .main-content{
-    /* margin: 96px 135px; */
-    /* display: flex; */
+.feedback-list{
+    display: flex;
+    overflow: hidden;
 }
+
 
 .feedback .feedback-item{
     display: flex;
     justify-content: space-between;
+    flex-shrink: 0;
+    width: 100%;
 }
 
 
@@ -484,6 +487,55 @@ line-height: 54px; /* 122.727% */
     cursor: pointer;
 }
 
-.feedback .dots .dot:hover{
+.feedback .dots .dot.active{
     background-color: var(--color-button);
+}
+
+.feedback .feedback-item .avatar{
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+}
+
+/* -----------------features------------ */
+
+.features{
+    margin-top: 135px;
+    padding: 65px 0;
+}
+
+.features .body{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.features .images{
+    display: flex;
+    gap: 30px;
+}
+
+.features .text{
+    width: 470px;
+}
+
+.features .images img{
+    width: 270px;
+    height: 405px;
+    object-fit: cover;
+    border-radius: 16px;
+}
+
+.features .images img.lower{
+    margin-top: 34px;
+}
+
+.features .desc{
+    margin-top: 16px;
+}
+
+.features .fea-btn{
+    margin-top: 32px;
+    background-color: var(--color-button);
+    width: 137px;
 }
