--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -539,3 +539,19 @@ line-height: 54px; /* 122.727% */
     background-color: var(--color-button);
     width: 137px;
 }
+
+/* -------------------features-2------------- */
+.features-2{
+    margin-top: 70px;
+}
+
+.features-2 .text{
+    width: 570px;
+    height: 298px;
+}
+
+.features-2 img.learn-one{
+    width: 470px;
+    height: 440px;
+    border-radius: 20px;
+}
