--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -555,3 +555,120 @@ line-height: 54px; /* 122.727% */
     height: 440px;
     border-radius: 20px;
 }
+/* --------------------blog----------------- */
+
+.blog{
+    margin-top: 135px;
+    height: 878px;
+    background-color: #FFFCF4;
+}
+
+.blog .blog-content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.blog .main-content .blog-top{
+    text-align: center;
+    padding-top: 96px;
+}
+
+.blog .item{
+    border-radius: 16px;
+    background: #FFF;
+}
+
+.blog .item:hover{
+    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+
+.blog .blog-top .desc{
+    width: 448px;   
+    margin: 16px auto 55px;
+    color: #696262;
+    font-size: 1.6rem;
+    line-height: 1.75; /* 175% */
+    
+}
+
+.blog .blog-content .desc::before{
+    content: "";
+    display: inline-block;
+    margin-right: 4px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: var(--color-button);
+}
+
+.blog .blog-content img{
+    width: 370px;
+    height: 250px;
+    border-radius: 16px 16px 0px 0px;
+    object-fit: cover;
+}
+
+.blog .item .info{
+    padding: 20px 20px 28px;
+}
+
+.blog .item .info .desc{
+    width: 133px;
+    height: 26px;
+    color: #5F5B53;
+    font-family: Poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 185.714% */
+    display: flex;
+    align-items: center;
+}
+
+.blog .item .rectangle{
+    margin: 12px 0;
+    width: 160px;
+    height: 1px;
+    border-radius: 0.5px;
+    background: #E2DFDA;    
+}
+
+.blog .item .question{
+    width: 330px;
+    color: #171100;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.75; /* 175% */
+}
+
+.blog .item .btn-read{
+    width: 118px;
+    height: 50px;
+    border-radius: 25px;
+    margin-top: 12px;
+    font-size: 14px;
+}
+
+.blog .item .btn-read:hover{
+    background-color: var(--color-button);
+}
+
+.blog .dots{
+    justify-content: center;
+    margin-top: 36px;
+    display: flex;
+    gap: 6px;
+}
+
+.blog .dots .dot{
+    width: 6px;
+    height: 6px;
+    border-radius: 6px;
+    background: #634700;
+    cursor: pointer;
+}
+
+.blog .dots .active{
+    background-color: var(--color-button);
+    cursor: default;
+}
