--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,8 @@ html{
 body{
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
-    width: 1440px;
-    margin: 0 auto;
-    height: 10000px;
+    /* width: 1440px; */
+    /* padding: 0 auto; */
 }
 /*---------------------- common----------- */
 a{
@@ -670,4 +669,72 @@ line-height: 54px; /* 122.727% */
 .blog .dots .active{
     background-color: var(--color-button);
     cursor: default;
+}
+
+/* -----------footer------------- */
+.footer{
+    background-color: #2E2100;
+    padding: 96px 135px 0px;
+}
+
+.footer .row{
+    display: flex;
+    padding-bottom: 38px;
+    border-bottom: 1px solid #59554B;
+}
+
+.footer .row .column{
+    width: 21.6%;
+}
+
+.footer .row .column:first-child{
+    width: 35%;
+}
+
+.footer .column .desc{
+    max-width: 267px;
+    margin: 18px 0;
+    color: #BFBCB2;
+    font-size: 1.4rem;
+    line-height: 1.85;
+}
+
+.footer .social{
+    display: flex;
+    gap: 18px;
+}
+
+.footer .title{
+    display: inline-block;
+    padding-right: 48px;
+    padding-bottom: 14px;
+    margin-bottom: 28px;
+    border-bottom: 1px solid #59554B;
+    color: #FFF;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.75; 
+}
+
+.footer .list li a{
+    display: inline-block;
+    margin-bottom: 12px;
+    color: #BFBCB2;
+    font-size: 1.4rem;
+    line-height: 1.85; 
+}
+
+.footer .column strong{
+    color: #FFF;
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1.86; 
+}
+
+.footer .copyright{
+    padding:  28px 0;
+    color: #807D74;
+    text-align: center;
+    font-size: 1.4rem;
+    line-height: 1.86; /* 185.714% */
 }
